maze.island.IslandMaze.scala.error
Compilation error:
IslandMaze:69: error: Boolean does not take parameters
  return isMurNord();
                  ^